@@ -5,5 +5,6 @@ alias pa_rule-merger='php -r "require_once '"'"'utils/rule-merger.php'"'"';" $@'
 alias pa_address-edit='php -r "require_once '"'"'utils/address-edit.php'"'"';" $@'
 alias pa_service-edit='php -r "require_once '"'"'utils/service-edit.php'"'"';" $@'
 alias pa_upload-config='php -r "require_once '"'"'utils/upload-config.php'"'"';" $@'
+alias pa_override-finder='php -r "require_once '"'"'utils/override-finder.php'"'"';" $@'
 
-alias ckp-exclude='php -r "require_once '"'"'utils/checkpoint-exclude.php'"'"';" $@'
+alias pa_ckp-exclude='php -r "require_once '"'"'utils/checkpoint-exclude.php'"'"';" $@'
